css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');

body, h2, h3, h4, h5, p, button{
    margin: 0;
}

html {
    font-size: 16px;
}

body {
    background: #070724;
    background-image: url('/assets/background-stars.svg');
}

header {
    display: grid;
    grid-template-columns: 2fr 1fr;
    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
    
}

.logo{
    margin: auto 0 auto 2rem;
}

#page-title{
    font-family: Antonio;
    font-size: 2rem;
    font-weight: 500;
    color: #fff;
    text-transform: uppercase;
}

#header-menu {
    margin-top: auto;
    margin-bottom: auto;
    justify-content: end;
}

.menu-item {
    display: inline;
    margin-right: 2rem;
    font-family: League Spartan;
    font-size: 0.785rem;
    font-weight: bold;
    color: #fff;
    text-transform: uppercase;
    list-style-type: none;
    cursor: pointer;
}
.menu-item:hover {
    border-bottom: solid 2px #6D2ED5;
    transition: ease-in 0.25s;
}

.menu-clicked {
    background-color: #6D2ED5;
    transition: ease-in 0.1s;
}

#hamburger-menu {
    display: none;
    cursor: pointer;
    border: none;
    background: transparent;
}


.planet-container {
    display: grid;
    grid-template-columns: 0.85fr 19.5rem;
    padding: 4rem 10.5rem 4rem 16rem;
}

#planet-image {
   max-width: 28.125rem;
   max-height: 28.125rem;
   overflow: hidden;
   margin: auto;
}

#planet-image img {
    width: 100%;
    height: auto;
}

#planet-info {
    margin: auto;
    max-width: 9rem;

}

#planet-name {
    font-family: Antonio;
    font-size: 3rem;
    font-weight: 500;
    color: #fff;
    text-transform: uppercase;
    margin: 0 0 1.5rem 0;
}


#planet-description {
    font-family: League Spartan;
    font-size: 1rem;
    color: #fff;
    margin: 0 0 1.5rem 0;
    line-height: 1.5rem;
}

#planet-source {
    display: flex;
}

#planet-source span {
    font-family: League Spartan;
    font-size: 1rem;
    color: rgba(255, 255, 255, 0.5);
    line-height: 1.5rem;

}

#planet-source-text {
    font-family: League Spartan;
    font-size: 1rem;
    font-weight: bold;
    color: rgba(255, 255, 255, 0.5);
    line-height: 1.5rem;
    text-decoration: underline;
    padding: 0 8px;
}

#source-icon {
    margin: auto 0;
}

#planet-buttons {
    display: grid;
    gap: 1rem;
    margin: 2.5rem 0 0 0;
}

.main-button {
    height: 3rem;
    background: none;
    border: 1px solid rgba(255, 255, 255, 0.25);
    box-sizing: border-box; /* Include padding and border in the element's total width and height */
    font-family: League Spartan;
    font-size: 1rem;
    font-weight: bold;
    color: #fff;
    text-align: left;
    text-transform: uppercase;
    letter-spacing: 0.16rem;
    line-height: 1.5rem;
    padding: 0.75rem 0 0.688rem 0;
    cursor: pointer;
}
.main-button:hover{
    background-color: #6D2ED5;
    border-color: #6D2ED5;
    transition: ease-in 0.15s;
}

.button-clicked {
    background-color: #6D2ED5;
    border-color: #6D2ED5;
}


.button-number {
    letter-spacing: 0.16rem;
    line-height: 1.5rem;
    padding: 0 1.75rem;
    opacity: 0.5;
}

.planet-boxes {
    display: flex;
    justify-content: space-between;
    grid-column: 1 / span 2;
    margin: 5.5rem 0 0 0;
    
}

.planet-box {
    box-sizing: border-box; /* Ensures the element's padding and border are included within its total width and height, preventing unexpected layout sizes. */
    width: 16rem;
    color: #fff;
    border: 1px solid rgba(255, 255, 255, 0.25);
    padding: 20px 0px 27px 25px;
}

.planet-box h3 {
    font-family: League Spartan;
    font-size: 0.688rem;
    font-weight: bold;
    color: rgba(255, 255, 255, 0.5);
    line-height: 1.5rem;
    letter-spacing: 1px;
    text-transform: uppercase;
    margin-bottom: .25rem;
}

.planet-box-info{
    font-family: Antonio;
    font-size: 2.5rem;
    color: #fff;
    line-height: 3.25rem;
    letter-spacing: -1.5px;
    text-transform: uppercase;
    display: flex;
}

.footer-message{
    display: flex;
    justify-content: center;
    border-top: 1px solid rgba(255, 255, 255, 0.25);
    padding-top: 1.5rem;
}

.footer-message p{
    font-family: League Spartan;
    font-size: 1rem;
    color: #fff;
    margin: 0 0 1.5rem 0;
    line-height: 1.5rem;
    
}

.footer-user{
    font-family: League Spartan;
    font-size: 1rem;
    color: #fff;
    margin: 0 0 1.5rem 0;
    line-height: 1.5rem;
    background-color: #6D2ED5;
    cursor: pointer;
    text-decoration: none;
}

.footer-user:hover{
    color: #6D2ED5;
    background-color: #fff;
    transition: ease-in 0.25s;
}

#hamburger-menu{
    display: block;
}



.menu-hidden {
    display: none;
    opacity: 0;
    transition: opacity 0.5s ease;
}

.menu-shown {
    display: block;
    opacity: 1;
    position: absolute;
    top: 15%;
    background-color: rgba(0,0,0,0.5);
    width: 100%; 
    box-shadow: 0 8px 16px rgba(0,0,0,0.2); 
    transition: opacity 0.5s ease;
}

/* Breakpoints */

/* sm Breakpoint */
@media (max-width: 767px){
    .menu-item {
        display: block;
        padding: .5rem;
        width: 100%;
    }

    ul#header-menu-elements{
        padding-inline-start: 0px;
    }
    
    .planet-container {
        display: block;
        padding: 2.5rem;
    }

    #planet-image {
        max-width: 30rem;
        max-height: 30rem;
        overflow: hidden;
        margin: auto;
        margin: 0 0 2.5rem 0;
     }
     
     #planet-image img {
         width: 100%;
         height: auto;
     }


    .planet-boxes {
        display: block;
        margin: 2.5rem 0 0 0;
    }

    .planet-box{
        margin: 0 0 1rem 0;
        width: 100%;
    }

    .footer-message{
        display: flex;
        justify-content: center;
        border-top: 1px solid rgba(255, 255, 255, 0.25);
        padding: 1.5rem 2rem 0 2rem;
        text-align: center;
    }

    #hamburger-menu{
        display: flex;
        justify-content: flex-end;
        margin: 0 2rem 0 0 ;
    }

    #hamburger-menu img{
        align-self: center;
    }

}

/* md Breakpoint */
@media (min-width: 768px) and (max-width: 1023px){
    .menu-item {
        margin-right: 1rem;
    }
    
    .menu-hidden {
        display: block;
        opacity: 1;
    }

    #hamburger-menu{
        display: none;
    }

    .planet-container {
        display: block;
        padding: 2.5rem;
    }

    #planet-image {
        max-width: 30rem;
        max-height: 30rem;
        overflow: hidden;
        margin: auto;
        margin: 0 0 2.5rem 0;
     }
     
     #planet-image img {
         width: 100%;
         height: auto;
     }

    .planet-boxes {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        margin: 2.5rem 0 0 0;
        column-gap: 1rem;
    }

    .planet-box{
        margin: 0 0 1rem 0;
        width: 100%;
    }

    .footer-message{
        display: flex;
        justify-content: center;
        border-top: 1px solid rgba(255, 255, 255, 0.25);
        padding: 1.5rem 2rem 0 2rem;
        text-align: center;
    }

}

/* lg Breakpoint */
@media (min-width: 1024px) and (max-width: 1279px){
    .menu-item {
        margin-right: 2rem;
    }
    .menu-hidden {
        display: block;
        opacity: 1;
    }

    #hamburger-menu{
        display: none;
    }

    .planet-container{
        display: grid;
        grid-template-columns: 1fr 1fr;
        column-gap: 5rem;
        padding: 2.5rem;
    }

    .planet-boxes{
        column-gap: 1rem;
    }
    
    .footer-message{
        margin-top: 20rem;
    }

    

}

/* xl Breakpoint */
@media (min-width: 1280px){
    .menu-hidden {
        display: block;
        opacity: 1;
    }

    #hamburger-menu{
        display: none;
    }

    .menu-item {
        margin-right: 1rem;
    }

}

